Changed website view

--- a/index.html
+++ b/index.html
@@ -1,88 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Danil's Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            grid-gap: 20px;
-        }
-
-        .project-card {
-            background-color: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-        }
-
-        .project-title {
-            font-size: 1.2rem;
-            margin-bottom: 10px;
-        }
-
-        .project-description {
-            font-size: 0.9rem;
-            margin-bottom: 10px;
-        }
-
-        .project-image {
-            width: 100%;
-            max-height: 200px;
-            object-fit: cover;
-            border-radius: 4px;
-            margin-bottom: 10px;
-        }
-
-        .review {
-            background-color: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            font-size: 0.9rem;
-            line-height: 1.4;
-            margin-bottom: 20px;
-        }
-    </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Simple Website Design HTML CSS</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
 <body>
-    <div class="container">
-        <div class="project-card">
-            <img class="project-image" src="tf.png" alt="Project 1">
-            <h2 class="project-title">Project 1</h2>
-            <p class="project-description">Description of project 1 goes here...</p>
+    <nav>
+        <div class="menu">
+            <div class="logo">
+                <a href="https://github.com/s1mba10">S1mba10</a>
+            </div>
+            <ul>
+                <li><a href="https://github.com/s1mba10">Home</a></li>
+                <li><a href="https://github.com/s1mba10">About</a></li>
+                <li><a href="https://github.com/s1mba10">Services</a></li>
+                <li><a href="https://github.com/s1mba10">Contact</a></li>
+                <li><a href="https://github.com/s1mba10">Feedback</a></li>
+            </ul>
         </div>
-        <div class="project-card">
-            <img class="project-image" src="AWS.png" alt="Project 2">
-            <h2 class="project-title">Project 2</h2>
-            <p class="project-description">Description of project 2 goes here...</p>
+    </nav>
+    <div class="img"></div>
+    <div class="center">
+        <div class="title">My amazing website</div>
+        <div class="sub_title">s1mba10</div>
+        <div class="btns">
+            <a href="https://github.com/s1mba10"><button>Learn More</button></a>
+            <a href="https://github.com/s1mba10"><button>Subscribe</button></a>
         </div>
-        <!-- Add more project cards here -->
-
-        <div class="review">
-            <p>"Danil's work is truly exceptional. I was amazed by his attention to detail and creativity."</p>
-            <p>- Reviewer 1</p>
-        </div>
-        <div class="review">
-            <p>"I've never seen someone so dedicated to delivering high-quality results. Danil is a true professional."
-            </p>
-            <p>- Reviewer 2</p>
-        </div>
-        <!-- Add more reviews here -->
     </div>
 </body>
 
